<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_news">

    <fragment
            android:id="@+id/navigation_news"
            android:name="com.haverzard.workitout.ui.news.NewsFragment"
            android:label="@string/title_news"
            tools:layout="@layout/fragment_news">

        <action
                android:id="@+id/action_show_webview"
                app:destination="@+id/navigation_news_webview"/>

    </fragment>

    <fragment
            android:id="@+id/navigation_news_webview"
            android:name="com.haverzard.workitout.ui.news.NewsWebViewFragment"
            android:label="@string/title_news_content"
            tools:layout="@layout/fragment_news_webview">
        <argument
                android:name="url"
                app:argType="string"/>
    </fragment>

    <fragment
            android:id="@+id/navigation_tracker"
            android:name="com.haverzard.workitout.ui.tracker.TrackerFragment"
            android:label="@string/title_tracker"
            tools:layout="@layout/fragment_tracker"/>

    <fragment
            android:id="@+id/navigation_history"
            android:name="com.haverzard.workitout.ui.history.HistoryFragment"
            android:label="@string/title_history"
            tools:layout="@layout/fragment_history">

        <action
                android:id="@+id/action_history"
                app:destination="@id/navigation_history_list"/>
    </fragment>

    <fragment
            android:id="@+id/navigation_history_list"
            android:name="com.haverzard.workitout.ui.history.HistoryListFragment"
            android:label="@string/title_history_list"
            tools:layout="@layout/fragment_history_list">

        <argument
                android:name="date"
                app:argType="string"/>
        <action
                android:id="@+id/action_history_list"
                app:destination="@id/navigation_history_detail"/>
    </fragment>

    <fragment
            android:id="@+id/navigation_history_detail"
            android:name="com.haverzard.workitout.ui.history.HistoryDetailFragment"
            android:label="@string/title_history_detail"
            tools:layout="@layout/fragment_history_list">

        <argument
                android:name="history_id"
                app:argType="integer"/>
    </fragment>

    <fragment
            android:id="@+id/navigation_schedule"
            android:name="com.haverzard.workitout.ui.schedule.ScheduleFragment"
            android:label="@string/title_schedule"
            tools:layout="@layout/fragment_schedule">

            <action
                    android:id="@+id/action_add_schedule"
                    app:destination="@id/navigation_add_schedule"/>

    </fragment>

    <fragment
            android:id="@+id/navigation_add_schedule"
            android:name="com.haverzard.workitout.ui.schedule.AddScheduleFragment"
            android:label="@string/add_schedule"
            tools:layout="@layout/fragment_add_schedule">

        <argument
                android:name="type"
                app:argType="string"/>
    </fragment>

</navigation>